@@ -4,6 +4,9 @@ jq-show-player-programming-recipes=Show player programming recipes
 jq-quality-bonuses-import=Add extra quality bonuses by string
 jq-recycling-efficiency=Efficiency of recycling recipes
 jq-alt-overlay=Alternate item quality overlay position
+jq-quality-no-quality-items=Items to disable quality for
+jq-quality-no-quality-groups=Groups to disable quality for
+jq-quality-no-quality-subgroups=Subgroups to disable quality for
 
 [mod-setting-description]
 jq-use-extra-bonuses=Enables several balanced quality bonuses that were not indicated in the quality FFF
@@ -11,6 +14,9 @@ jq-show-player-programming-recipes=Enables machine programming with quality modu
 jq-quality-bonuses-import=[color=yellow]Advanced feature.[/color] A simple way to add more quality bonuses. Refer to source repository for details.
 jq-recycling-efficiency=The portion of ingredients of items returned by the recycler
 jq-alt-overlay=Move the quality overlay on items to the top left
+jq-quality-no-quality-items=Names of items to disable quality for, separated by commas
+jq-quality-no-quality-groups=Names of groups of items to disable quality for, separated by commas
+jq-quality-no-quality-subgroups=Names of subgroups of items to disable quality for, separated by commas
 
 [jq]
 quality-1=Normal
