@@ -3,6 +3,7 @@ Version: 0.1.25
 Date: ????
   Changes:
     - Handle recycling of items with non-stackable ingredients
+    - Setting for "no quality" items/groups/subgroups for simpler interoperability
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.24
 Date: 2024-01-11
